chore: some endpoint updates
